# hello-game

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  run_game.bat
.github/: dependabot.yml
.github/workflows/: ci.yml
.kiro/hooks/: auto-test-on-save.json  final-test-check.json  quality-check-on-finish.json  suggest-commit.json  update-docs-reminder.json  verify-game-startup.json
.kiro/specs/: prd.md
.kiro/steering/: docker_convention.md  documentation_convention.md  game_agent_convention.md  git_convention.md  python_convention.md
assets/: README.md
docs/: CODE_REVIEW.md  CONTRIBUTING.md  DOCUMENTATION_REVIEW.md  IMPROVEMENTS_APPLIED.md  INDEX.md  LESSONS_LEARNED.md  PROCEDURAL_SPRITES.md  PROJETO_COMPLETO.md  QUICK_REFERENCE.md  SPRITES_IMPLEMENTATION.md  SPRITES_SUMMARY.md  SPRITE_GUIDE.md
docs/guidelines/: git_convection.md  readme_writing_guide.md  tech_spec.md
docs/prompts/: game_agent.md
src/pyblaze/: __init__.py  main.py  settings.py
src/pyblaze/entities/: base_entity.py  checkpoint.py  enemy.py  player.py  (+1 more)
tests/: conftest.py
tests/integration/: __init__.py  test_gameplay.py
tests/unit/: test_camera.py  test_checkpoint.py  test_enemy.py  test_physics.py  test_player.py  test_ring.py  test_save_system.py
tools/: create_player_spritesheet.py  custom_masks.py  generate_advanced_sprites.py  generate_all_sprites.py  generate_sprites.py  optimize_assets.py  procedural_sprite_generator.py  sprite_viewer.py  switch_sprites.py
(+17 files in other folders)
